capstone/k8s/base/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: shopsphere-backend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: shopsphere-backend

  template:
    metadata:
      labels:
        app: shopsphere-backend

    spec:
      serviceAccountName: shopsphere-backend
      containers:
        - name: backend
          image: shopsphere-backend:v2

          ports:
            - containerPort: 5000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"

          readinessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 5000
            initialDelaySeconds: 10
            periodSeconds: 15
