capstone/k8s/base/database-statefulset.yaml
# Kubernetes API version for StatefulSets
apiVersion: apps/v1

# StatefulSet is used because MySQL requires stable identity and storage
kind: StatefulSet

metadata:
  # Name of the StatefulSet
  name: shopsphere-database

spec:
  # Headless Service used by the StatefulSet for stable network identity
  serviceName: shopsphere-database

  # We are starting with one MySQL instance
  replicas: 1

  # StatefulSet manages Pods with this label
  selector:
    matchLabels:
      app: shopsphere-database

  # Blueprint used to create the MySQL Pod
  template:
    metadata:
      labels:
        app: shopsphere-database

    spec:
      containers:
        - name: mysql

          # MySQL container image
          image: mysql:8.4

          # MySQL listens on port 3306
          ports:
            - containerPort: 3306

          # Environment variables required by MySQL
          # Values are pulled from our Kubernetes Secret
          volumeMounts:
            - name: mysql-storage
              mountPath: /var/lib/mysql

            - name: db-init
              mountPath: /docker-entrypoint-initdb.d

          startupProbe:
            exec:
              command:
                - sh
                - -c
                - mysqladmin ping -h 127.0.0.1 -uroot -p"$MYSQL_ROOT_PASSWORD"
            periodSeconds: 5
            failureThreshold: 12

          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - mysqladmin ping -h 127.0.0.1 -uroot -p"$MYSQL_ROOT_PASSWORD"
            periodSeconds: 10
            failureThreshold: 3

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - mysqladmin ping -h 127.0.0.1 -uroot -p"$MYSQL_ROOT_PASSWORD"
            periodSeconds: 15
            failureThreshold: 3

          # CPU and memory allocation for MySQL
          resources:
            requests:
              cpu: 250m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi

      # Pod-level volume backed by the initialization ConfigMap
      volumes:
        - name: db-init
          configMap:
            name: shopsphere-db-init

  # Creates a persistent PVC for each StatefulSet Pod
  volumeClaimTemplates:
    - metadata:
        name: mysql-storage

      spec:
        accessModes:
          - ReadWriteOnce

        resources:
          requests:
            storage: 5Gi
