capstone/k8s/base/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: shopsphere-frontend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: shopsphere-frontend

  template:
    metadata:
      labels:
        app: shopsphere-frontend

    spec:
      serviceAccountName: shopsphere-frontend
      containers:
        - name: frontend
          image: shopsphere-frontend:v1

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
