capstone/k8s/base/backend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: shopsphere-backend

spec:
  type: ClusterIP

  selector:
    app: shopsphere-backend

  ports:
    - port: 80
      targetPort: 5000
