capstone/k8s/base/database-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: shopsphere-database

spec:
  selector:
    app: shopsphere-database

  ports:
    - port: 3306
      targetPort: 3306

  clusterIP: None
