capstone/k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: shopsphere-frontend

spec:
  type: ClusterIP

  selector:
    app: shopsphere-frontend

  ports:
    - port: 80
      targetPort: 80
